Updates to datamodel

--- a/FishersYMCA.Swimming.Web/index.html
+++ b/FishersYMCA.Swimming.Web/index.html
@@ -95,7 +95,8 @@
                    </div>
                </div>
               <div id="tabs-2">
-                  
+                   <table id="TuesSchedule">
+                   </table>
               
               </div>
               <div id="tabs-3">
